--- a/modules/openapi-generator/src/main/resources/typescript-angular/api.service.mustache
+++ b/modules/openapi-generator/src/main/resources/typescript-angular/api.service.mustache
@@ -192,8 +192,14 @@ export class {{classname}} {
         // authentication ({{name}}) required
 {{#isApiKey}}
 {{#isKeyInHeader}}
-        if (this.configuration.apiKeys && this.configuration.apiKeys["{{keyParamName}}"]) {
-            {{#useHttpClient}}headers = {{/useHttpClient}}headers.set('{{keyParamName}}', this.configuration.apiKeys["{{keyParamName}}"]);
+        if (this.configuration.apiKeys){
+            const apiKeyProvided = this.configuration.apiKeys["{{keyParamName}}"];
+            if (apiKeyProvided) {
+                const apiKey = typeof apiKeyProvided === 'function'
+                    ? apiKeyProvided()
+                    : apiKeyProvided;
+                {{#useHttpClient}}headers = {{/useHttpClient}}headers.set('{{keyParamName}}', apiKey);
+            }
         }
 
 {{/isKeyInHeader}}
